infrastructure/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-https
  namespace: monitoring
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: websecure
    namespace: gateway-system
  hostnames:
  - "grafana.crulabs.intern"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  parentRefs:
  - name: crulabs-gateway
    sectionName: web
    namespace: gateway-system
  hostnames:
  - "grafana.crulabs.intern"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
